tests/NormalTests/paczka1/fuzzy1/27270170.err
Error in line 5: S81 S81 54,9
Error in line 35: S81 S81 49,7
